[package]
name = "zoom-server"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = { version = "0.8", features = ["ws"] }
webrtc = "0.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = "0.3"
once_cell = "1.21"
dashmap = "6"
rand = "0.9"
thiserror = "2"
